--- a/DragViewLayout/app/src/main/res/layout/fragment2.xml
+++ b/DragViewLayout/app/src/main/res/layout/fragment2.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:gravity="center"
         android:textSize="16sp"
