--- a/DragViewLayout/app/src/main/res/layout/activity_test3.xml
+++ b/DragViewLayout/app/src/main/res/layout/activity_test3.xml
@@ -13,5 +13,6 @@
         android:layout_width="150dp"
         android:layout_height="300dp"
         android:layout_marginLeft="100dp"
+        android:src="@mipmap/ic_launcher"
         />
 </LinearLayout>
