--- a/DragViewLayout/app/src/main/res/layout/fragment.xml
+++ b/DragViewLayout/app/src/main/res/layout/fragment.xml
@@ -5,14 +5,14 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     >
-    <ImageView
-        android:id="@+id/dragview"
+    <com.github.chrisbanes.photoview.PhotoView
+        android:id="@+id/photoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:src="@mipmap/ic_launcher"
         >
-    </ImageView>
+    </com.github.chrisbanes.photoview.PhotoView>
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
