--- a/DragViewLayout/DragView/src/main/res/layout/dragview2_.xml
+++ b/DragViewLayout/DragView/src/main/res/layout/dragview2_.xml
@@ -9,9 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible">
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewPager"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager2"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </com.yanxuwen.dragview.DragViewLayout>
