--- a/DragViewLayout/app/src/main/res/layout/activity_test3.xml
+++ b/DragViewLayout/app/src/main/res/layout/activity_test3.xml
@@ -14,5 +14,6 @@
         android:layout_height="300dp"
         android:layout_marginLeft="100dp"
         android:src="@mipmap/ic_launcher"
+        android:scaleType="matrix"
         />
 </LinearLayout>
