--- a/DragViewLayout/app/src/main/res/layout/fragment2.xml
+++ b/DragViewLayout/app/src/main/res/layout/fragment2.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp"
+    android:layout_marginTop="100dp"
+    android:layout_marginBottom="100dp"
     >
     <TextView
         android:id="@+id/text"
@@ -11,7 +15,7 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:textSize="16sp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccent"
         >
     </TextView>
 </RelativeLayout>
