--- a/DragViewLayout/DragView/src/main/res/layout/dragview2_.xml
+++ b/DragViewLayout/DragView/src/main/res/layout/dragview2_.xml
@@ -9,9 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible">
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager2"
+
+        <com.yanxuwen.dragview.ViewPager2Container
+            android:id="@+id/viewPager2Container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </com.yanxuwen.dragview.ViewPager2Container>
     </com.yanxuwen.dragview.DragViewLayout>
 </FrameLayout>
