--- a/DragViewLayout/app/src/main/res/layout/activity_test.xml
+++ b/DragViewLayout/app/src/main/res/layout/activity_test.xml
@@ -7,23 +7,31 @@
     android:orientation="vertical"
 
     >
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       >
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_alignParentRight="true"
-        android:background="@color/colorAccent"
-        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_alignParentRight="true"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:text="ViewPage"
+            android:textColor="#000"
+            android:textSize="16sp" />
     </RelativeLayout>
+
     <TextView
         android:id="@+id/text2"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="20dp"
         android:background="@color/colorAccent"
-        />
+        android:gravity="center"
+        android:text="ViewPage2"
+        android:textColor="#000"
+        android:textSize="16sp" />
 </LinearLayout>
