--- a/DragViewLayout/app/src/main/res/layout/fragment.xml
+++ b/DragViewLayout/app/src/main/res/layout/fragment.xml
@@ -3,25 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
-    >
+    android:background="#ffffff">
+
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/photoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher"
-        />
+        android:src="@mipmap/ic_launcher" />
+
     <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:textSize="16sp"
-        >
-    </TextView>
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:textColor="#000"
+        android:textSize="16sp"></TextView>
 </RelativeLayout>
