--- a/DragViewLayout/DragView/src/main/res/layout/dragview_.xml
+++ b/DragViewLayout/DragView/src/main/res/layout/dragview_.xml
@@ -3,7 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <View
+        android:id="@+id/v_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
     <com.yanxuwen.dragview.DragViewLayout
         android:id="@+id/dragLayout"
         android:layout_width="match_parent"
