--- a/DragViewLayout/DragView/src/main/res/values/style.xml
+++ b/DragViewLayout/DragView/src/main/res/values/style.xml
@@ -4,6 +4,7 @@
     <style name="FrameTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:fitsSystemWindows">false</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="DragViewTheme">
