--- a/DragViewLayout/app/src/main/res/values/styles.xml
+++ b/DragViewLayout/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="FrameTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:fitsSystemWindows">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
 </resources>
