启动动画效果不好

--- a/DragViewLayout/app/src/main/res/layout/activity_test.xml
+++ b/DragViewLayout/app/src/main/res/layout/activity_test.xml
@@ -12,6 +12,7 @@
         android:id="@+id/layout1"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginTop="0dp"
         android:background="@color/colorAccent">
 
         <ImageView
